Estrutura de pastas para administracao

--- a/war/admin/index.html
+++ b/war/admin/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>UNIP CCP42 - Analisador Financeiro [In&iacute;cio]</title>
-<link href="./css/Estilo.css" type="text/css" rel="stylesheet">
-<script language="JavaScript" type="text/javascript" src="index.js">
+<title>UNIP CCP42 - Analisador Financeiro [admin-In&iacute;cio]</title>
+<link href="../css/Estilo.css" type="text/css" rel="stylesheet">
+<script language="JavaScript" type="text/javascript" src="../index.js">
 </script>
 
 </head>
@@ -12,14 +12,22 @@
 <div id="conteiner">
 
 <div id="menu">
-<div id="divMenuTitulo"><img id="imgIconeMenu" alt="Icone do Menu"
-	src="./imagem/mnu.png"> <span id="divItemMenuInicio"> <a
-	href="/">In&iacute;cio</a> </span> &nbsp;|&nbsp; <span
-	id="divItemMenuSobre"> <a href="/sobre">Sobre</a> </span>
-&nbsp;|&nbsp; <span id="divItemMenuQuemSomos"> <a
-	href="/quem-somos/">Quem Somos</a> </span> &nbsp;|&nbsp; <span
-	id="divItemMenuContato"> <a href="/contato/">Contato</a> </span>&nbsp;|&nbsp;
-<span id="divItemMenuAjuda"> <a href="/ajuda/">Ajuda</a> </span></div>
+	<div id="divMenuTitulo">
+		<span id="divItemMenuInicio"> <a
+		href="/admin">In&iacute;cio</a> </span> 
+		&nbsp;|&nbsp; 
+		<span id="divItemMenuPergunta">
+			<a href="/admin/pergunta/">Perguntas</a>
+		</span>
+		&nbsp;|&nbsp;
+		<span id="divItemMenuAplicacao">
+			<a href="/admin/classe/">Aplica&ccedil;&atilde;o</a>
+		</span>
+		&nbsp;|&nbsp;
+		<span id="divItemMenuUsuario">
+			<a href="/admin/usuario/">Usu&aacute;rios</a>
+		</span>
+	</div>	
 </div>
 
 <div id="corpo">
@@ -40,16 +48,16 @@ google_ad_height = 60;
 </div>
 
 <div id="divH2Inicio" class="divH2">
-<h2>In&iacute;cio</h2>
+<h2>admin-In&iacute;cio</h2>
 <hr>
 <div style="padding-left: 18px;">
 	<div id="divSeta"></div>
 </div>
 <div id="divFormulario" style="width: 470px;">
 
-<p style="text-align: justify;">Escreveu seu primeiro programa em <a href="http://en.wikipedia.org/wiki/PL/I" target="_blank">PL/I</a> linguagem do computador de seu primeiro emprego na IBM, teve que portar o mesmo para a Assembly depois que seu computador não suportava mais o tamanho do programa.<br />
-
-
+<p style="text-align: justify;">
+	
+</p>
 </div>
 </div>
 <div id="divMensagemConteiner"><span>Mensagem</span>
